unpackaged/main/default/objects/MCCallout__c/MCCallout__c.object-meta.xml
<CustomObject>
    <label>MCCallout</label>
    <nameField>
        <label>MCCallout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCCallouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>