unpackaged/main/default/objects/MCCallout__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>MCCallouts</relationshipLabel>
    <relationshipName>MCCallouts</relationshipName>
    <type>Lookup</type>
</CustomField>