unpackaged/main/default/objects/MCCallout__c/fields/Send_on__c.field-meta.xml
<CustomField>
    <fullName>Send_on__c</fullName>
    <label>Send on</label>
    <type>DateTime</type>
</CustomField>